popover: fix title & contextual-actions alignment

--- a/app/styles/organisms/popover.less
+++ b/app/styles/organisms/popover.less
@@ -29,6 +29,7 @@
 
 .oss-popover__title-line {
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 
